Add typography options and fonts.  Created homepage for wordpress site.

--- a/wp-content/themes/tillman-connection/resources/assets/styles/components/_buttons.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/components/_buttons.scss
@@ -41,3 +41,13 @@ $_button-background-color-hover: shade($action-color, 20%);
     }
   }
 }
+
+.is-tillman-teal {
+  background-color: $tillman;
+  color: $white;
+
+  &:hover {
+    background-color: $white;
+    color: $tillman;
+  }
+}
