--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -12,6 +12,8 @@
 // @import "~some-node-module";
 
 /** Import theme styles */
+@import "common/fonts";
+@import "common/typography";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
@@ -20,6 +22,7 @@
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/homepage";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
