--- a/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_homepage.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_homepage.scss
@@ -1,15 +1,22 @@
 .get-connected-container {
-  position: relative;
-
-  img {
-    display: block;
-    max-width: 100%;
-  }
+  align-items: center;
+  background-attachment: fixed;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  height: 75vh;
+  justify-content: center;
 }
 
 .get-connected {
+  border-radius: 7px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: darken($tillman, 10%);
+  box-shadow: 5px 5px 10px $black;
   font-size: 1rem;
-  position: absolute;
+  padding: 0.5rem 2rem;
 }
 
 .wrap {
@@ -18,6 +25,7 @@
 }
 
 .hero-section {
+  align-items: center;
   font-size: 2rem;
   font-weight: 300;
 
@@ -80,11 +88,20 @@
   color: $tillman;
 }
 
+.family-greeting {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 1em;
+}
+
 .tillman-connection-logo-section {
+  align-items: center;
   color: $tillman;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  min-width: 409px;
 
   h2,
   span {
