--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "layouts/sidebar";
 @import "layouts/footer";
 @import "layouts/homepage";
+@import "layouts/committee";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
