Add back to top autoscroll feature.

--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
+@import "layouts/backtotop";
 @import "layouts/homepage";
 @import "layouts/committee";
 @import "layouts/pages";
