--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -18,6 +18,8 @@
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
+@import "components/lists";
+@import "components/loops";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
@@ -26,6 +28,7 @@
 @import "layouts/fund";
 @import "layouts/homepage";
 @import "layouts/committee";
+@import "layouts/contact";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
