Add mobile styles for footer.

--- a/wp-content/themes/tillman-connection/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/common/_variables.scss
@@ -54,6 +54,7 @@ $black: #111;
 
 $text-color: #6a6a6a;
 $primary-color: $light-blue;
+$footer-text: #fefefe;
 
 // Font Colors
 $base-font-color: $text-color;
