--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -28,6 +28,7 @@
 @import "layouts/fund";
 @import "layouts/homepage";
 @import "layouts/committee";
+@import "layouts/family-history";
 @import "layouts/contact";
 @import "layouts/pages";
 @import "layouts/posts";
