--- a/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/main.scss
@@ -30,6 +30,7 @@
 @import "layouts/committee";
 @import "layouts/family-history";
 @import "layouts/contact";
+@import "layouts/error";
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
