--- a/wp-content/themes/tillman-connection/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/common/_variables.scss
@@ -51,10 +51,10 @@ $maroon: #85144b;
 $silver: #ddd;
 $gray: #aaa;
 $black: #111;
+$footer-bg: #272727;
 
 $text-color: #6a6a6a;
 $primary-color: $light-blue;
-$footer-text: #fefefe;
 
 // Font Colors
 $base-font-color: $text-color;
