--- a/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_fund.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_fund.scss
@@ -1,3 +1,29 @@
-.fundraise-hero {
-  border: 1px dashed blue;
+.single-fund {
+  .article-banner-container {
+    background-position: center;
+  }
+
+  .fundraise-hero {
+    .hero-section-content {
+      font-weight: 300;
+    }
+  }
+
+  .gallery {
+    @extend .columns;
+    @extend .is-multiline;
+
+    .gallery-item {
+      @extend .column;
+      @extend .is-one-quarter-desktop;
+
+      margin: 0;
+
+      img {
+        border: 2px solid $medium-gray;
+        border-radius: 10px;
+      }
+    }
+  }
 }
+
