--- a/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_fund.scss
+++ b/wp-content/themes/tillman-connection/resources/assets/styles/layouts/_fund.scss
@@ -1,12 +1,41 @@
+$page-width: 960px;
+
+.archive {
+  .custom-posts-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    max-width: $page-width;
+    width: 100%;
+
+    .fundraise-hero {
+      height: 100%;
+      margin: 0 0 0.8rem;
+      max-height: 600px;
+      max-width: $page-width;
+      overflow: hidden;
+      width: 100%;
+
+      img {
+        display: block;
+        max-width: 100%;
+      }
+    }
+
+    .archive-read-more {
+      align-self: flex-end;
+      display: flex;
+    }
+  }
+}
+
 .single-fund {
   .article-banner-container {
     background-position: center;
   }
 
-  .fundraise-hero {
-    .hero-section-content {
-      font-weight: 300;
-    }
+  .hero-section-content {
+    font-weight: 300;
   }
 
   .gallery {
@@ -26,4 +55,3 @@
     }
   }
 }
-
